Add keyboard shortcuts support for BeOS. Thanks to Arougthopher <arougthopher@lizardland.net> for the patch. Bug #70181 r=cls